fix(ZNTA-2706) alignment of editor nav arrows, text size for project name in editor nav, remove extra padding form bottom of nav dropdown

--- a/server/zanata-frontend/src/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/app/editor/containers/Root/index.css
@@ -696,6 +696,14 @@ h4.modal-title {
   vertical-align: sub;
 }
 
+.Editor-currentProject {
+  font-size: 1rem;
+}
+
+.EditorDropdown-content ul {
+  margin-bottom: 0;
+}
+
 .icon-history svg, .icon-comment svg {
   vertical-align: sub;
 }
